<resources>
    <string name="app_name">Dance Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dash"> - </string>
    <string name="date">Дата:</string>
    <string name="location">Место:</string>
    <string name="contacts">Контакты:</string>
    <string name="search">Поиск</string>
    <string name="search_hint">По названию.....</string>
    <string name="menu_calendar">Календарь</string>
    <string name="menu_events">События</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_favorites">Избранное</string>

    <string name="cd_calendar">Calendar</string>
    <string name="cd_events">Events</string>
    <string name="cd_search">Search</string>
    <string name="cd_favorite">Favorite</string>

    <string name="not_planned_events">Событий \nне запланировано</string>
    <string name="mon">ПН</string>
    <string name="tue">ВТ</string>
    <string name="wen">СР</string>
    <string name="thu">ЧТ</string>
    <string name="fri">ПТ</string>
    <string name="sat">СБ</string>
    <string name="sun">ВС</string>


    <string-array name="month_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <!-- errors -->
    <string name="error_geting_list_ev_dates">Ошибка получения списка дат событий</string>
    <string name="error_server_working">Ошибка работы сервера</string>
    <string name="error_database_working">Ошибка работы c базой данных</string>
    <string name="error_search">Ошибка поиска</string>
    <string name="error_get_list_events">Ошибка получения списка событий</string>
    <string name="error_del_fav">Ошибка удаления события из списка "Избранное"</string>
    <string name="error_show_fav">Ошибка получения списка событий "Избранное"</string>
    <string name="error_add_fav">Ошибка добавления события в "Избранное"</string>
    <string name="empty_fav_list">Список \nотслеживаемых\n событий пуст</string>

</resources>