<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".presentation.view.events.MonthWithEventsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_month"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:textSize="11sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:layout_weight="1"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            android:textSize="11sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:layout_weight="1"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wen"
            android:textSize="11sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:layout_weight="1"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            android:textSize="11sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:layout_weight="1"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            android:textSize="11sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:layout_weight="1"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:textSize="11sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:layout_weight="1"
            android:textColor="@color/red"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:textSize="11sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            android:layout_weight="1"
            android:textColor="@color/red"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="7"
        tools:listitem="@layout/date_item"/>
</LinearLayout>