<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.eventinfo.EventInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imvi_event_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvi_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/date"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvi_event_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/location"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvi_event_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/contacts"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvi_event_org_contacts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:textStyle="italic"/>
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:textSize="18sp"
            android:text="Описание"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="15dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvi_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:textSize="18sp"
            android:layout_margin="10dp"/>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>
